fixed padding on horizontal scroll

--- a/public/style.css
+++ b/public/style.css
@@ -506,6 +506,7 @@ div.horizontal {
     width: 100%;
     height: 400px;
     overflow: auto;
+    padding: 0 0 0 2%;
 }
 
 /*// table-layout: fixed does a lot of the magic, here. It makes sure that the "table cells" retain the pixel dimensions you want.*/
@@ -513,6 +514,8 @@ div.horizontal {
     display: table;
     table-layout: fixed;
     width: 100%;
+    padding: 0 2% 0 0;
+
 }
 
 /*// Arranging your content inside the "cells" is as simple as using the vertical-align and text-align properties. Floats work, too.*/
